MQ/mq-operator-install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cp4i
