MQ/mq-setup.yaml
# The IBM entitlement key can be obtained here: https://myibm.ibm.com/products-services/containerlibrary
# Store the entitlment key as a secret: 
# oc create secret docker-registry ibm-entitlement-key --docker-server=cp.icr.io --docker-username=cp --docker-password=ENTITLEMENT_KEY
---
# create a route for the channel for SNI
# See: https://www.ibm.com/support/pages/ibm-websphere-mq-how-does-mq-provide-multiple-certificates-certlabl-capability
# i.e. CHANNEL(EXTERNAL.SVRCONN) would be external2e-svrconn
# Service names must match
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: testqmgr-ibm-mq-external-svrconn
  namespace: cp4i
spec:
  host: external2e-svrconn.chl.mq.ibm.com
  to:
    kind: Service
    name: testqmgr-ibm-mq
    weight: 100
  port:
    targetPort: qmgr
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
